--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "2.x",
     "body-parser": "^1.18.3",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
@@ -17,9 +18,10 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
+    "multer-sharp-s3": "^0.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "sharp": "^0.22.0"
+    "sharp": "^0.20.8"
   }
 }
