--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^12.4.0",
     "aws-sdk": "2.x",
     "body-parser": "^1.18.3",
     "dotenv": "^8.0.0",
@@ -27,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "sanitize-html": "^1.20.1",
     "sharp": "^0.20.8"
   }
 }
